<resources>
    <string name="app_name">AttendanceManagerApp</string>

    <!-- 初期設定画面 -->
    <string name="initial_setting_title">こんにちは\n初期設定を行なってください</string>
    <string name="initial_setting_user_text">ユーザー名</string>
    <string name="initial_setting_attendance_date_text">出勤日</string>
    <string name="initial_setting_attendance_time_text">出勤時間</string>
    <string name="initial_setting_break_time_text">休憩時間</string>
    <string name="initial_setting_time_unit_text">時間単位</string>
    <string name="initial_setting_salaried_text">残り有給日数</string>
    <string name="initial_setting_button_text">設定する</string>
    <string name="initial_setting_incomplete_text">すべての項目を入力してください。</string>

    <!-- 勤怠入力画面 -->
    <string name="attendance_start_button_start">出勤</string>
    <string name="attendance_start_button_end">退勤</string>
    <string name="attendance_attendance_starting">出勤中...</string>
    <string name="attendance_usage_salaried">有給を使用</string>
    <string name="attendance_output_xlsl">Excel出力</string>
    <string name="attendance_attendance_time_today">本日の作業時間：</string>


    <!-- ナビゲーションドロワー -->
    <string name="navigation_drawer_basic_setting">基本設定</string>
    <string name="navigation_drawer_change_templete">テンプレート変更</string>
    <string name="navigation_drawer_edit_history">履歴/編集</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
