<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
                name="viewmodel"
                type="com.kk.attendancemanagerapp.attendancemanagerapp.attendance.AttendanceViewModel"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:id="@+id/attendance_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:text="@{viewmodel.mTodayDate}"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

            <Button
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:text="@{viewmodel.mIsStart ? @string/attendance_start_button_end : @string/attendance_start_button_start, default=@string/attendance_start_button_start}"
                    android:onClick="@{() -> viewmodel.onClickStartButton()}"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_light"
                    android:visibility="@{viewmodel.mIsStart ? View.VISIBLE : View.INVISIBLE}"
                    android:text="@string/attendance_attendance_starting"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:orientation="horizontal"
                android:gravity="center">

            <Button
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/attendance_usage_salaried"/>

            <Button
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/attendance_output_xlsl"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance_attendance_time_today"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewmodel.mTodayAttendanceTime}"/>
        </LinearLayout>
    </LinearLayout>
</layout>
