<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
                name="viewmodel"
                type="com.kk.attendancemanagerapp.attendancemanagerapp.initialsetting.InitialSettingViewModel"/>
    </data>

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical"
                tools:context=".initialsetting.InitialSettingFragment">

            <!-- タイトル -->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:text="@string/initial_setting_title"
                    android:textSize="@dimen/initial_setting_title_size"
                    android:textStyle="bold"/>

            <!-- ユーザー名 -->
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="@dimen/initial_setting_text_width"
                        android:layout_height="wrap_content"
                        android:text="@string/initial_setting_user_text"/>

                <EditText
                        android:id="@+id/user_edit_text"
                        android:layout_width="@dimen/initial_setting_edit_text_width"
                        android:layout_height="@dimen/initial_setting_edit_text_height"
                        android:layout_marginStart="@dimen/initial_setting_edit_text_margin_start"
                        android:singleLine="true"
                        android:gravity="center_horizontal"
                        android:text="@={viewmodel.mUserName}"/>
            </LinearLayout>

            <!-- 出勤日 -->
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="@dimen/initial_setting_text_width"
                        android:layout_height="wrap_content"
                        android:text="@string/initial_setting_attendance_date_text"/>
            </LinearLayout>

            <!-- 出勤日画像-->
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewmodel.onClickMondayButton()}"
                        android:src="@{viewmodel.mSelectMonday ? @drawable/monday_on : @drawable/monday_off}"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewmodel.onClickTuesdayButton()}"
                        android:src="@{viewmodel.mSelectTuesday ? @drawable/tuesday_on : @drawable/tuesday_off}"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewmodel.onClickWednesdayButton()}"
                        android:src="@{viewmodel.mSelectWednesday ? @drawable/wednesday_on : @drawable/wednesday_off}"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewmodel.onClickThursdayButton()}"
                        android:src="@{viewmodel.mSelectThursday ? @drawable/thursday_on : @drawable/thursday_off}"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewmodel.onClickFridayButton()}"
                        android:src="@{viewmodel.mSelectFriday ? @drawable/friday_on : @drawable/friday_off}"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewmodel.onClickSaturdayButton()}"
                        android:src="@{viewmodel.mSelectSaturday ? @drawable/saturday_on : @drawable/saturday_off}"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewmodel.onClickSundayButton()}"
                        android:src="@{viewmodel.mSelectSunday ? @drawable/sunday_on : @drawable/sunday_off}"/>

            </LinearLayout>

            <!-- 出勤時間 -->
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="@dimen/initial_setting_text_width"
                        android:layout_height="wrap_content"
                        android:text="@string/initial_setting_attendance_time_text"/>

                <EditText
                        android:id="@+id/attendance_time_edit_text"
                        android:layout_width="@dimen/initial_setting_edit_text_width"
                        android:layout_height="@dimen/initial_setting_edit_text_height"
                        android:layout_marginStart="@dimen/initial_setting_edit_text_margin_start"
                        android:inputType="none"
                        android:gravity="center_horizontal"
                        android:text="@={viewmodel.mAttendanceTime}"/>
            </LinearLayout>

            <!-- 休憩時間 - START -->
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="@dimen/initial_setting_text_width"
                        android:layout_height="wrap_content"
                        android:text="@string/initial_setting_break_time_text"/>

                <EditText
                        android:id="@+id/break_time_start_edit_text"
                        android:layout_width="@dimen/initial_setting_edit_text_width"
                        android:layout_height="@dimen/initial_setting_edit_text_height"
                        android:layout_marginStart="@dimen/initial_setting_edit_text_margin_start"
                        android:inputType="time"
                        android:gravity="center_horizontal"
                        android:text="@={viewmodel.mBreakStart}"/>
            </LinearLayout>

            <!-- 休憩時間 - END -->
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="@dimen/initial_setting_text_width"
                        android:layout_height="wrap_content"/>

                <EditText
                        android:id="@+id/break_time_end_edit_text"
                        android:layout_width="@dimen/initial_setting_edit_text_width"
                        android:layout_height="@dimen/initial_setting_edit_text_height"
                        android:layout_marginStart="@dimen/initial_setting_edit_text_margin_start"
                        android:inputType="time"
                        android:gravity="center_horizontal"
                        android:text="@={viewmodel.mBreakEnd}"/>
            </LinearLayout>

            <!-- 時間単位 -->
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="@dimen/initial_setting_text_width"
                        android:layout_height="wrap_content"
                        android:text="@string/initial_setting_time_unit_text"/>
            </LinearLayout>

            <!-- 出勤日画像-->
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewmodel.onClickMinuteButton()}"
                        android:src="@{viewmodel.mSelectMinute ? @drawable/minute_on : @drawable/minute_off}"/>

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewmodel.onClickFifteenButton()}"
                        android:src="@{viewmodel.mSelectFifteen ? @drawable/fifteen_minute_on : @drawable/fifteen_minute_off}"/>

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewmodel.onClickThirtyButton()}"
                        android:src="@{viewmodel.mSelectThirty ? @drawable/thirty_minute_on : @drawable/thirty_minute_off}"/>
            </LinearLayout>

            <!-- 残り有給日数 -->
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="@dimen/initial_setting_text_width"
                        android:layout_height="wrap_content"
                        android:text="@string/initial_setting_salaried_text"/>

                <EditText
                        android:id="@+id/salaried_edit_text"
                        android:layout_width="@dimen/initial_setting_edit_text_width"
                        android:layout_height="@dimen/initial_setting_edit_text_height"
                        android:layout_marginStart="@dimen/initial_setting_edit_text_margin_start"
                        android:inputType="number"
                        android:gravity="center_horizontal"
                        android:text="@={viewmodel.mSalaried}"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                <Button
                        android:id="@+id/initial_setting_next_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/initial_setting_button_text"
                        android:onClick="@{() -> viewmodel.onClickNextButton()}"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/initial_setting_incomplete_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="14sp"
                    android:text="@string/initial_setting_incomplete_text"
                    android:visibility="@{viewmodel.mIsIncompleteText ? View.VISIBLE : View.GONE}"/>
        </LinearLayout>
    </ScrollView>
</layout>